Scrollbar issue fixed

--- a/hotstar/src/index.css
+++ b/hotstar/src/index.css
@@ -4,3 +4,15 @@
 body{
     background-color: #01011e;
 }
+
+/* Custom utility for hiding scrollbars */
+@layer utilities {
+  .scrollbar-hide {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+  
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+}
